[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/enemy-01/idle.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.9577, 32.3945 )

[node name="Enemy" type="KinematicBody2D" groups=[
"enemies",
]]
position = Vector2( 0, 0.308296 )
scale = Vector2( 0.2, 0.2 )
collision_layer = 4
collision_mask = 8
script = ExtResource( 1 )
tamanho = 0.2

[node name="dir_node" type="Node2D" parent="."]

[node name="muzzle" type="Position2D" parent="dir_node"]
position = Vector2( -3.67954, -1.7949 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0, 0.694118, 1, 1 )
shape = SubResource( 1 )

[node name="shooting_time" type="Timer" parent="."]
wait_time = 2.29279

[node name="state_time" type="Timer" parent="."]
wait_time = 3.0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="time_variation" type="Timer" parent="."]
wait_time = 0.001
[connection signal="timeout" from="shooting_time" to="." method="_on_shooting_time_timeout"]
[connection signal="timeout" from="state_time" to="." method="_on_state_time_timeout"]
[connection signal="timeout" from="time_variation" to="." method="_on_time_variation_timeout"]
